# Aetheris

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  supervisord.conf
.claude/: launch.json  settings.local.json
.claude/commands/: py-multiagent-schema.md
.streamlit/: config.toml
aetheris/: .calendar-token-example.json  .drive-token-example.json  .gmail-token-example.json  __init__.py  client_secret_aetheris-example.json  config.py  google-token-all-example.json  llm.py  logging_config.py
aetheris/agent/: edges.py  graph.py  nodes.py  prompts.py  state.py
aetheris/api/: dependencies.py  main.py  middleware.py  schemas.py
aetheris/guardrails/: __init__.py  input_guard.py  output_guard.py  schemas.py
aetheris/mcp/: client.py  google_tools.py  tavily_tools.py
aetheris/mcp_tools/: client.py  gmail_mcp_server.py  google_auth.py  google_tools.py  mcp_client.py  tavily_tools.py
aetheris/memory/: checkpointer.py  long_term.py  mem0_memory.py  schemas.py
aetheris/observability/: tracing.py
aetheris/rag/: ingest.py  pipeline.py  retriever.py  schemas.py
aetheris/ui/: app.py
data/google/: .calendar-token.json  .gmail-token.json  client_secret_aetheris.json
docs/: api_reference.md  architecture.md  index.html  privacy.html  test_documentation.md
scripts/: _authorize_drive.py  _check_db.py  _check_drive_scope.py  _migrate_db.py  _test_tavily.py  entrypoint.sh  ingest_documents.py  reset_memory.py
tests/: conftest.py
tests/e2e/: test_find_document_flow.py  test_market_research_flow.py  (+1 more)
(+36 files in other folders)
