[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aetheris"
version = "0.1.0"
description = "Autonomous Cognitive Agent — TFM Master en Soluciones IAG"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]
include = ["aetheris*"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "unit: fast isolated unit tests (no external I/O)",
    "integration: tests that use real Chroma/SQLite in /tmp",
    "e2e: full-stack tests with mocked external APIs",
]

# ---------------------------------------------------------------------------
# black
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py312"]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
